@@ -452,6 +452,8 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 912) Search box easier to reach in text browsers (lynx, links)
 * $wgParserCacheExpireTime added
 * Skip loading of RecentChange.php except where needed
+* Enforce $wgSVGMaxSize when rendering, even for SVGs with a very large source 
+  size. This is necessary to limit server memory usage.
 
 
 === Caveats ===
